Moved code from notebook to .py files. Put everything into a class.

--- a/scraper/scraper.ipynb
+++ b/scraper/scraper.ipynb
@@ -6,11 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## GIT\n",
-    "# Hacked tor restarting, session creating instead of using huge nested with statements.\n",
-    "# Rebuilt getPages method with new method.\n",
-    "# Added looping to get all the urls.\n",
-    "# Added parsing of the data."
+    "## GIT\n"
    ]
   },
   {
@@ -45,7 +41,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from selenium import webdriver\n",
+    "\n",
+    "from fake_useragent import UserAgent\n",
+    "\n",
+    "import os\n",
+    "import time\n",
+    "from subprocess import Popen\n",
+    "\n",
+    "import re\n",
+    "import string\n",
+    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +123,7 @@
     "    '''\n",
     "    tor_path = 'C:/Users/Jurgis/Desktop/tor-win32-0.4.2.7/Tor/tor.exe'\n",
     "    \n",
-    "    # Kill existing tor process.\n",
+    "    # Kill existing tor process. TODO: Make this OS-proof.\n",
     "    os.system(\"taskkill /F /im tor.exe\")\n",
     "    \n",
     "    # Run a tor process in the background, wait for it to start.\n",
@@ -124,15 +142,6 @@
     "#     with Controller.from_port(port = 9051) as controller:\n",
     "#         controller.authenticate(password=\"eatshit\")\n",
     "#         controller.signal(Signal.NEWNYM)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "restart_tor()"
    ]
   },
   {
@@ -174,39 +183,8 @@
     "    s.headers = UserAgent().random\n",
     "    \n",
     "    print('Built a Tor session at IP {}.'.format(session.get('http://httpbin.org/ip').json()['origin']))\n",
-    "    return session\n",
-    "\n",
-    "# Make a request through the Tor connection\n",
-    "# IP visible through Tor\n",
-    "session = get_tor_session()\n",
-    "print(session.get(\"http://httpbin.org/ip\").text)\n",
-    "# Above should print an IP different than your public IP\n",
-    "\n",
-    "# Following prints your normal public IP\n",
-    "print(requests.get(\"http://httpbin.org/ip\").text)\n",
-    "\n",
-    "from stem import Signal\n",
-    "from stem.control import Controller\n",
-    "\n",
-    "# signal TOR for a new connection \n",
-    "restart_tor()\n",
-    "session = get_tor_session()\n",
-    "print(session.get(\"http://httpbin.org/ip\").text)"
+    "    return session"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -227,24 +205,20 @@
     "    TODO: Descr.\n",
     "    TODO: Handle SPECIFIC banned / captcha'ed cases with try excepts.\n",
     "    '''\n",
-    "    try:\n",
-    "        # Set additional Tor session parameters.\n",
-    "        session.headers = UserAgent().random\n",
+    "    # Set additional Tor session parameters.\n",
+    "    session.headers = UserAgent().random\n",
     "\n",
-    "        # Scrape the main page to get the total number of pages.\n",
-    "        page = session.get(url)\n",
-    "        soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "    # Scrape the main page to get the total number of pages.\n",
+    "    page = session.get(url)\n",
+    "    soup = BeautifulSoup(page.content, 'html.parser')\n",
     "\n",
-    "        # Extract all page number buttons to find the maximum digit value.\n",
-    "        page_number_buttons = str(soup.find_all(class_='page-bt'))\n",
-    "        page_number_buttons = re.findall('\\d+', page_number_buttons)\n",
+    "    # Extract all page number buttons to find the maximum digit value.\n",
+    "    page_number_buttons = str(soup.find_all(class_='page-bt'))\n",
+    "    page_number_buttons = re.findall('\\d+', page_number_buttons)\n",
     "\n",
-    "        total_pages = max([int(number) for number in page_number_buttons])\n",
+    "    total_pages = max([int(number) for number in page_number_buttons])\n",
     "\n",
-    "        return total_pages\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        return e"
+    "    return total_pages"
    ]
   },
   {
@@ -293,6 +267,7 @@
     "# Get listing urls for all of the pages. If an exception occurs while scraping, prints the exception.\n",
     "listing_urls = []\n",
     "for page_number in range(1, total_pages + 1):\n",
+    "    # TODO: Move to config.\n",
     "    page_url = f'https://www.aruodas.lt/butu-nuoma/puslapis/{page_number}/?FOrder=AddDate&detailed_search=1'\n",
     "    \n",
     "    page_urls = get_page_urls(s, page_url)\n",
@@ -345,7 +320,7 @@
     "    # Find all name and item classes withing object details class.\n",
     "    object_details_class = soup.find(class_=html_tag_object_details[0])\n",
     "    \n",
-    "#     Sometimes listings get displayed but have no info. Scraper cathers?\n",
+    "    # Sometimes listings get displayed but have no info. Scraper catchers? TODO: Investigate.\n",
     "    if object_details_class is None:\n",
     "        return None\n",
     "        \n",
@@ -1020,19 +995,16 @@
     "    listing_urls = f.readlines()\n",
     "    \n",
     "res = []\n",
-    "try:\n",
-    "    for listing_url in listing_urls[1:5]:\n",
-    "        driver = webdriver.Chrome('D:/Projects/Personal/Current/Rent AVM/rent-avm/scraper/chromedriver.exe')\n",
+    "for listing_url in listing_urls[1:5]:\n",
+    "    driver = webdriver.Chrome('D:/Projects/Personal/Current/Rent AVM/rent-avm/scraper/chromedriver.exe')\n",
     "\n",
-    "        driver.get(listing_url)\n",
-    "        page_source = driver.page_source\n",
-    "        driver.close()\n",
+    "    driver.get(listing_url)\n",
+    "    page_source = driver.page_source\n",
+    "    driver.close()\n",
     "\n",
-    "        soup = BeautifulSoup(page_source, 'lxml')\n",
+    "    soup = BeautifulSoup(page_source, 'lxml')\n",
     "\n",
-    "        res.append(get_object_data(soup))\n",
-    "except:\n",
-    "    pass\n",
+    "    res.append(get_object_data(soup))\n",
     "    \n",
     "\n",
     "df = pd.DataFrame()\n",
