Fixed all known bugs in parse_object_data. Added code struture to prepare for inevitable bans. Added storing of dead urls / scraper honeypot urls.

--- a/scraper/scraper.ipynb
+++ b/scraper/scraper.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## GIT\n"
+    "#### This notebook is now primarily used as a scrap notebook for quick code-testing purposes."
    ]
   },
   {
@@ -41,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,30 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Built a Tor session at IP 185.220.101.134.\n",
-      "{\n",
-      "  \"origin\": \"185.220.101.134\"\n",
-      "}\n",
-      "\n",
-      "{\n",
-      "  \"origin\": \"78.58.222.15\"\n",
-      "}\n",
-      "\n",
-      "Built a Tor session at IP 87.118.92.43.\n",
-      "{\n",
-      "  \"origin\": \"87.118.92.43\"\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_tor_session():\n",
     "    # Use Tor ports for a requests.session.\n",
@@ -188,17 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Built a Tor session at IP 185.220.101.134.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_number_of_pages(session, url):\n",
     "    '''\n",
@@ -223,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,14 +218,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Built a Tor session at IP 193.70.13.35.\n"
+     "ename": "NameError",
+     "evalue": "name 's' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-d9fe481df0a5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_tor_session\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mtotal_pages\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_number_of_pages\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'https://www.aruodas.lt/butu-nuoma/'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Get listing urls for all of the pages. If an exception occurs while scraping, prints the exception.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mlisting_urls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-23-261e96a9c46a>\u001b[0m in \u001b[0;36mget_tor_session\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;31m# Set additional Tor session parameters.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mheaders\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mUserAgent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Built a Tor session at IP {}.'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'http://httpbin.org/ip'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'origin'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 's' is not defined"
      ]
     }
    ],
@@ -283,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,6 +460,32 @@
     "    \n",
     "    \n",
     "    return object_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver = webdriver.Chrome('D:/Projects/Personal/Current/Rent AVM/rent-avm/scraper/chromedriver.exe')\n",
+    "\n",
+    "driver.get('https://www.aruodas.lt/butu-nuoma-kaune-centre-k-bugos-g-centras-k-bugos-g-vieno-kambario-46-kvm-4-989277/')\n",
+    "page_source = driver.page_source\n",
+    "\n",
+    "soup = BeautifulSoup(page_source, 'lxml')\n",
+    "\n",
+    "object_details_class = soup.find(class_=[\"obj-details\", \"obj-details \"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "page_source = driver.page_source"
    ]
   },
   {
@@ -1132,7 +1132,12 @@
    "execution_count": 80,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'contacts-title' - realtor name exists\n",
+    "'obj-contacts ', 'obj-contacts' - realtor exists / no realtor\n",
+    "'obj-contacts simple' - individual\n",
+    "'long-link-wrapper' - link exists"
+   ]
   },
   {
    "cell_type": "code",
@@ -1143,45 +1148,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "driver = webdriver.Chrome('D:/Projects/Personal/Current/Rent AVM/rent-avm/scraper/chromedriver.exe')\n",
+    "\n",
+    "driver.get('https://www.aruodas.lt/butai-vilniuje-antakalnyje-pylimeliu-g-parduodamas-puikiai-irengtas-erdvus-ir-1-2860367/')\n",
+    "page_source = driver.page_source\n",
+    "soup = BeautifulSoup(page_source, 'lxml')\n",
+    "driver.close()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<div class=\"contacts-title\">Pardavėjo kontaktai</div>"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find(class_='contacts-title')#.contents[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://www.rebaltic.lt'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find(class_='long-link-wrapper').contents[1]['href']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('file.cfg', 'w') as f:\n",
+    "    f.writelines('\\n'.join(['test1', 'test2', 'test3']))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('file.cfg', 'a') as f:\n",
+    "    f.writelines('\\n'+'test1')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['test1', 'test2', 'test3', 'test1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('file.cfg', 'r') as f:\n",
+    "    test = [line.strip() for line in f.readlines()]\n",
+    "    \n",
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'test1\\ntest2\\ntest3'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
   },
   {
    "cell_type": "code",
