NOTE! THIS VERSION IS NOT WORKING! Moved deployment to Google App Engine, created the necessary changes. Added logs for Google. MAJOR ISSUE: Selenium cannot be ran on Google App Engine - will move to VM / starting vm through GAE.

--- a/scraper/scrap_notebook.ipynb
+++ b/scraper/scrap_notebook.ipynb
@@ -9,6 +9,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2020-06-05'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "datetime.datetime.today().date().strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.cloud.logging import Client\n",
+    "import logging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Client().setup_logging()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import google.cloud.logging\n",
+    "import os\n",
+    "\n",
+    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = 'D:/Projects/Personal/Current/Rent AVM/rent-avm/scraper/key.json'\n",
+    "\n",
+    "# Instantiates a client\n",
+    "client = google.cloud.logging.Client()\n",
+    "\n",
+    "# Retrieves a Cloud Logging handler based on the environment\n",
+    "# you're running in and integrates the handler with the\n",
+    "# Python logging module. By default this captures all logs\n",
+    "# at INFO level and higher\n",
+    "client.get_default_handler()\n",
+    "client.setup_logging()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Imports Python standard library logging\n",
+    "import logging\n",
+    "\n",
+    "# The data to log\n",
+    "text = 'Hello, world!'\n",
+    "\n",
+    "# Emits the data using the standard logging module\n",
+    "logging.error(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
    "outputs": [],
