--- a/scraper/scrap_notebook.ipynb
+++ b/scraper/scrap_notebook.ipynb
@@ -159,34 +159,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div id=\"validation-form\">\n",
-       "<div id=\"logo\">\n",
-       "<img src=\"https://aruodas-static.dgn.lt/static/svg/aruodo_logo.svg\"/>\n",
-       "<!--        <img src=\"--><!--/static/svg/aruodas_kaledinis_logo_2018.svg\"/>-->\n",
-       "</div>\n",
-       "<h3>Jūs viršijote leistiną šio puslapio peržiūros limitą.</h3>\n",
-       "    Norėdami pratęsti puslapio peržiūrą mūsų svetainėje, prašome patvirtinti kad jus ne robotas    <br/><br/>\n",
-       "<form action=\"/?page_captcha_verify\" method=\"POST\">\n",
-       "<button class=\"g-recaptcha\" data-callback=\"submitForm\" data-sitekey=\"6LdS7jEUAAAAANU9GTYMsVACX64B1ZAIvnqa9E5Z\">\n",
-       "            Tęsti        </button>\n",
-       "<input name=\"uri\" type=\"hidden\" value=\"%2Fbutu-nuoma-vilniuje-senamiestyje-gedimino-pr-apartamentai-idealiai-tinka-diplomatu-4-994611%2F\"/>\n",
-       "</form>\n",
-       "</div>"
+       "<h3>Jūs viršijote leistiną šio puslapio peržiūros limitą.</h3>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "soup.find(id='validation-form')"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find('h3').contents[0] == "
    ]
   },
   {
